# diary_project

./: .gitignore  .ruff.toml  pyproject.toml
diary_project/apps/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
diary_project/apps/diary/: admin.py  apps.py  constants.py  models.py  signals.py  util.py
diary_project/apps/diary/migrations/: 0001_initial.py  0002_alter_note_tags.py  0002_initial.py  0003_alter_note_text.py  0003_tag_slug.py  0004_remove_tag_slug_alter_tag_name.py  0005_alter_note_file_path.py  0006_note_unique_note_creation_time_for_author_and_more.py
diary_project/apps/users/migrations/: 0001_initial.py
diary_project/diary_project/: asgi.py  settings.py  wsgi.py
tests/: conftest.py
tests/test_api/: conftest.py  test_auth_endpoints.py  test_diary_endpoints.py  test_note_endpoints.py  test_tag_endpoints.py
tests/test_diary/: conftest.py  test_note.py  test_tag.py
